// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email Verification Transformer Tests should update methodType element and add appropriate UI elements to schema when redacted email does not exist in Idx response 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.email.challenge.mfa.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.email.verify.subtitle.text.without.email",
        },
        "type": "Description",
      },
      {
        "label": "oie.email.verify.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "email",
          },
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Verification Transformer Tests should update methodType element and add appropriate UI elements to schema when redacted email exists in Idx response 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.email.challenge.mfa.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.email.verify.subtitle.text.with.email",
        },
        "type": "Description",
      },
      {
        "label": "oie.email.verify.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "email",
          },
          "step": "mock-step",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
